gkeui/070-thm-pod-vipcockpit .yaml
apiVersion: v1
kind: Pod
metadata:
  name: tabrasa-cockpit
  namespace: thm
  labels:
    app: tabrasa-vip
spec:
  containers:
#VIP Cockpit Web App
  - name: vipcockpit-webapp
    image: oswaldodgmx/debug:webapp.vip
    ports:
    - containerPort: 80
    - containerPort: 443    
  hostNetwork: true
