gkeui/071-thm-services-vipcockpit.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tabrasa-vip
  name: vipcockpit
  namespace: thm
spec:
  ports:
  - port: 80
    name: low
    protocol: TCP
    targetPort: 80
  selector:
    app: tabrasa-vip
