gkeui/062-thm-ingress-consumerportal.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: consumerportal-ingress
  namespace: thm
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/override: "https-only"
spec:
  tls:
  - secretName: consumerportal-tls
    hosts:
      - k8s.eccordion.com
  rules:
  - host: k8s.eccordion.com
    http:
      paths:
      - path: /
        backend:
          serviceName: consumerportal
          servicePort: 80
